Update Cargo config